--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -3107,7 +3107,7 @@
         "wimgresultretouch.height=1024\n",
         "\n",
         "\n",
-        "##display.display(wimgresultbox)\n",
+        "display.display(wimgresultbox)\n",
         "#888\n",
         "\n",
         "print (wimgresult.width)\n",
