--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -48,8 +48,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TxIOPT0G5Lx1",
-        "cellView": "form"
+        "id": "TxIOPT0G5Lx1"
       },
       "source": [
         "#@markdown **Model and Output Paths**\n",
@@ -2514,6 +2513,8 @@
         "    wimgtrans.disabled=True\n",
         "    wretro.value=\"True\"\n",
         "    vwidth=jscommand(getwidth)\n",
+        "    print (vwidth)\n",
+        "    print (type(vwidth))\n",
         "    vheight=jscommand(getheight)\n",
         "    if (ww.value!=vwidth or wh.value!=vheight):\n",
         "      jscommand('prepare(\"%d\",\"%d\");' % (ww.value,wh.value))\n",
@@ -2682,10 +2683,10 @@
         "    # print (ww.value)\n",
         "    # print (wh.value)\n",
         "\n",
-        "    wimgresult.width=512\n",
-        "    wimgresultretouch.width=512\n",
-        "    wimgresult.height=768\n",
-        "    wimgresultretouch.height=768\n",
+        "    # wimgresult.width=512\n",
+        "    # wimgresultretouch.width=512\n",
+        "    # wimgresult.height=768\n",
+        "    # wimgresultretouch.height=768\n",
         "\n",
         "   \n",
         "\n",
@@ -3051,11 +3052,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "#from ipywidgets.widgets.widget_upload import ButtonStyle\n",
-        "\n",
-        "\n",
         "#@markdown **Param Builder**\n",
         "\n",
         "from IPython.display import Javascript\n",
@@ -3077,15 +3074,15 @@
         "wimgresult=widgets.Image(\n",
         "value=parenv.wimgempty,\n",
         "format='png',\n",
-        "width=str(parenv.ww.value),\n",
-        "height=str(1024)\n",
+        "width='auto',\n",
+        "height='auto'\n",
         ")\n",
         "\n",
         "wimgresultretouch=widgets.Image(\n",
         "value=parenv.wimgempty,\n",
         "format='png',\n",
-        "width=str(parenv.ww.value),\n",
-        "height=str(1024)\n",
+        "width='auto',\n",
+        "height='auto'\n",
         ")\n",
         "\n",
         "\n",
@@ -3099,12 +3096,9 @@
         "#     description='',\n",
         "# )\n",
         "\n",
-        "##wimgresultbox=widgets.HBox([wimgresult, wimgresultretouch])\n",
+        "wimgresultbox=widgets.HBox([wimgresult, wimgresultretouch])\n",
         "\n",
-        "display.display(wimgresult)\n",
-        "display.display(wimgresultretouch)\n",
-        "wimgresult.height=1024\n",
-        "wimgresultretouch.height=1024\n",
+        "\n",
         "\n",
         "\n",
         "display.display(wimgresultbox)\n",
