--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -91,15 +91,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VRNl2mfepEIe",
-        "cellView": "form"
+        "id": "VRNl2mfepEIe"
       },
       "source": [
-        "%%capture\n",
+        "\n",
         "#@markdown **Setup Environment**\n",
         "\n",
         "setup_environment = True #@param {type:\"boolean\"}\n",
-        "print_subprocess = False #@param {type:\"boolean\"}\n",
+        "print_subprocess = True #@param {type:\"boolean\"}\n",
         "\n",
         "\n",
         "\n",
@@ -748,7 +747,7 @@
         "#@markdown **Select and Load Model**\n",
         "\n",
         "model_config = \"v1-inference.yaml\" #@param [\"custom\",\"v1-inference.yaml\"]\n",
-        "model_checkpoint = \"sd-v1-5.ckpt\" #@param [\"custom\", \"sd-v1-4-full-ema.ckpt\", \"sd-v1-4.ckpt\",  \"sd-v1-5.ckpt\", \"sd-v1-3-full-ema.ckpt\", \"sd-v1-3.ckpt\", \"sd-v1-2-full-ema.ckpt\", \"sd-v1-2.ckpt\", \"sd-v1-1-full-ema.ckpt\", \"sd-v1-1.ckpt\", \"robo-diffusion-v1.ckpt\", \"f111.ckpt\"]\n",
+        "model_checkpoint = \"sd-v1-4.ckpt\" #@param [\"custom\", \"sd-v1-4-full-ema.ckpt\", \"sd-v1-4.ckpt\",  \"sd-v1-5.ckpt\", \"sd-v1-3-full-ema.ckpt\", \"sd-v1-3.ckpt\", \"sd-v1-2-full-ema.ckpt\", \"sd-v1-2.ckpt\", \"sd-v1-1-full-ema.ckpt\", \"sd-v1-1.ckpt\", \"robo-diffusion-v1.ckpt\", \"f111.ckpt\"]\n",
         "custom_config_path = \"\" #@param {type:\"string\"}\n",
         "custom_checkpoint_path = \"\" #@param {type:\"string\"}\n",
         "\n",
