--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -48,7 +48,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TxIOPT0G5Lx1"
+        "id": "TxIOPT0G5Lx1",
+        "cellView": "form"
       },
       "source": [
         "#@markdown **Model and Output Paths**\n",
@@ -91,14 +92,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VRNl2mfepEIe"
+        "id": "VRNl2mfepEIe",
+        "cellView": "form"
       },
       "source": [
-        "\n",
+        "%%capture\n",
         "#@markdown **Setup Environment**\n",
         "\n",
         "setup_environment = True #@param {type:\"boolean\"}\n",
-        "print_subprocess = True #@param {type:\"boolean\"}\n",
+        "print_subprocess = False #@param {type:\"boolean\"}\n",
         "\n",
         "\n",
         "\n",
@@ -955,7 +957,7 @@
         "  eval_js(command % (png64))\n",
         "\n",
         "def jscommand(command):\n",
-        "  eval_js(command);\n",
+        "  return eval_js(command);\n",
         "\n",
         "\n",
         "def encript(data):\n",
@@ -1864,12 +1866,12 @@
         "\n",
         "getwidth=\"\"\"\n",
         "\n",
-        "var vwidth=canvas.width\n",
+        "canvas.width\n",
         "\n",
         "\"\"\"\n",
         "\n",
         "getheight=\"\"\"\n",
-        "var vheight=canvas.height\n",
+        "canvas.height\n",
         "\"\"\"\n",
         "\n",
         "\n",
@@ -2512,8 +2514,6 @@
         "    wimgtrans.disabled=True\n",
         "    wretro.value=\"True\"\n",
         "    vwidth=jscommand(getwidth)\n",
-        "    print (vwidth)\n",
-        "    print (type(vwidth))\n",
         "    vheight=jscommand(getheight)\n",
         "    if (ww.value!=vwidth or wh.value!=vheight):\n",
         "      jscommand('prepare(\"%d\",\"%d\");' % (ww.value,wh.value))\n",
@@ -3071,15 +3071,11 @@
         "#def drawimgresult(sender):\n",
         "\n",
         "wimgresult=widgets.Image(\n",
-        "value=parenv.wimgempty,\n",
-        "format='png',\n",
         "width='auto',\n",
         "height='auto'\n",
         ")\n",
         "\n",
         "wimgresultretouch=widgets.Image(\n",
-        "value=parenv.wimgempty,\n",
-        "format='png',\n",
         "width='auto',\n",
         "height='auto'\n",
         ")\n",
@@ -3955,6 +3951,8 @@
         "\n",
         "# var data2 = canvas2.toDataURL('image/png')\n",
         "# var data3 = canvas1.toDataURL('image/png')\n",
+        "# var vwidth=canvas.width\n",
+        "# var vheight=canvas.height\n",
         "\n",
         "# var data = new Promise(resolve=>{\n",
         "#  button.onclick = ()=>{\n",
@@ -4047,6 +4045,16 @@
         "# merge(false);\n",
         "# \"\"\"\n",
         "\n",
+        "# getwidth=\"\"\"\n",
+        "\n",
+        "# canvas.width\n",
+        "\n",
+        "# \"\"\"\n",
+        "\n",
+        "# getheight=\"\"\"\n",
+        "# canvas.height\n",
+        "# \"\"\"\n",
+        "\n",
         "# def cpaint2(imageout, command):\n",
         "#     data2 = eval_js(command);\n",
         "#     binary = b64decode(data2.split(',')[1])\n",
@@ -4066,14 +4074,16 @@
         "#   eval_js(command % (png64))\n",
         "\n",
         "# def jscommand(command):\n",
-        "#   eval_js(command);\n",
+        "#  return eval_js(command);\n",
         "\n",
         "\n",
-        "\n",
+        "# vwidth=0\n",
         "# display.display(HTML(canvas_html))\n",
         "# jscommand('prepare(\"%d\",\"%d\");' % (512,512))\n",
         "# imgcommand('/content/3.png',reload_source)\n",
         "# imgcommand('/content/4.png', load_img_blend)\n",
+        "# vwidth=jscommand(getwidth)\n",
+        "# print (vwidth)\n",
         "\n",
         "\n",
         "# # ##cpaint2('/content/mask.png', get_data2)\n",
@@ -4149,8 +4159,7 @@
         "# # dump(wimage)\n"
       ],
       "metadata": {
-        "id": "B0Cs8RPxo_Jx",
-        "cellView": "form"
+        "id": "B0Cs8RPxo_Jx"
       },
       "execution_count": null,
       "outputs": []
