--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -3325,7 +3325,7 @@
         "<button type=\"button\" name=\"b2\" id=\"masktype\">Normal Brush</button>\n",
         "<button type=\"button\" name=\"b3\" id=\"clear\">Clear</button>\n",
         "<button type=\"button\" name=\"b5\" id=\"rawmask\">Show Mask</button>\n",
-        "<input type=\"range\" name=\"price\" id=\"brsz\" min=\"1\" max=\"20\" step=\"1\" value=\"10\"/>\n",
+        "<input type=\"range\" name=\"price\" id=\"brsz\" min=\"1\" max=\"40\" step=\"1\" value=\"10\"/>\n",
         "<output class=\"price-output\" for=\"price\"></output>\n",
         "<input type=\"range\" name=\"color\" id=\"colormask\" min=\"0\" max=\"0.99\" step=\"0.05\" value=\"0.5\"/>\n",
         "<input type=\"range\" name=\"b5\" id=\"sblur\" min=\"0\" max=\"20\" step=\"1\" value=\"0\"/>\n",
@@ -3466,9 +3466,23 @@
         "var mousebutton=0;\n",
         "var mode=true;\n",
         "var brushsize=brsz.value;\n",
+        "let latestPoint;\n",
         "\n",
         "output.textContent = brsz.value;\n",
         "var vmod=0.99;\n",
+        "\n",
+        "const continueStroke = (newPoint, linecolour, vctx) => {\n",
+        "    vctx.beginPath();\n",
+        "    vctx.moveTo(latestPoint[0], latestPoint[1]);\n",
+        "    vctx.strokeStyle = linecolour;\n",
+        "    vctx.lineWidth = brushsize;\n",
+        "    vctx.lineCap = \"round\";\n",
+        "    vctx.lineJoin = \"round\";\n",
+        "    vctx.lineTo(newPoint[0], newPoint[1]);\n",
+        "    vctx.stroke();\n",
+        "\n",
+        "    latestPoint = newPoint;\n",
+        "};\n",
         "\n",
         "const colors = document.getElementsByClassName('color');\n",
         "var vcolors = [];\n",
@@ -3509,14 +3523,11 @@
         "canvas.onmousedown = (e)=>{\n",
         "  if (blendmode!==blendmodes.paint)\n",
         "  {\n",
+        "  latestPoint=[mouse.x, mouse.y];\n",
         "  mousebutton=e.button;\n",
         "  ctx2.filter = \"blur(0px)\";\n",
         "  vblur.value=0;\n",
         "  ctx2.drawImage(canvas3,0,0,canvas1.width,canvas1.height)\n",
-        "  ctx.beginPath()\n",
-        "  ctx2.beginPath()\n",
-        "  ctx.moveTo(mouse.x, mouse.y)\n",
-        "  ctx2.moveTo(mouse.x, mouse.y)\n",
         "  canvas.addEventListener('mousemove', onMask)\n",
         "  }\n",
         "\n",
@@ -3556,28 +3567,22 @@
         " \n",
         "}\n",
         "var onMask = ()=>{\n",
-        "   if (mode) {\n",
-        "       ctx.beginPath()\n",
-        "       ctx2.beginPath()\n",
-        "       }\n",
+        "  \n",
         "  switch (mousebutton) {\n",
         "    case 0:\n",
-        "       if (blendmode===blendmodes.coloredlevels)  ctx2.fillStyle = colorSelected;\n",
-        "       else ctx2.fillStyle=\"black\";\n",
-        "       ctx2.arc(mouse.x, mouse.y, brushsize, 0, 2 * Math.PI) \n",
-        "       ctx2.fill()\n",
+        "       if (blendmode===blendmodes.coloredlevels) continueStroke([mouse.x, mouse.y], colorselected, ctx2);\n",
+        "       else continueStroke([mouse.x, mouse.y], \"black\", ctx2); \n",
         "       merge(false, mouse.x, mouse.y);\n",
         "       break;\n",
+        "\n",
         "    case 1:\n",
         "     ctx.drawImage(canvas2, 0, 0, canvas1.width, canvas1.height);\n",
         "     break; \n",
         "     \n",
         "    case 2:\n",
         "     \n",
-        "       ctx2.fillStyle = 'white'\n",
-        "       ctx2.arc(mouse.x, mouse.y, brushsize, 0, 2 * Math.PI)\n",
-        "       ctx2.fill()\n",
-        "       merge(false);\n",
+        "       continueStroke([mouse.x, mouse.y], \"white\", ctx2); \n",
+        "       merge(false, mouse.x, mouse.y);\n",
         "      break;\n",
         "    default:\n",
         "\n",
@@ -3587,21 +3592,16 @@
         "}\n",
         "\n",
         "var onPaint = ()=>{\n",
-        "   if (mode) {\n",
-        "       ctx.beginPath()\n",
-        "       ctx6.beginPath()\n",
-        "       ctx2.beginPath()\n",
-        "       }\n",
+        " \n",
         "  switch (mousebutton) {\n",
         "    case 0:\n",
-        "       //ctx.scale(2, 2);\n",
-        "       ctx6.fillStyle = paintcolor;\n",
-        "       ctx6.arc(mouse.x, mouse.y, brushsize, 0, 2 * Math.PI) \n",
-        "       ctx6.fill()\n",
-        "       ctx2.fillStyle=\"black\";\n",
-        "       ctx2.arc(mouse.x, mouse.y, brushsize, 0, 2 * Math.PI) \n",
-        "       ctx2.fill()\n",
-        "       merge(false);\n",
+        "    \n",
+        "       continueStroke([mouse.x, mouse.y], paintcolor, ctx6); \n",
+        "       continueStroke([mouse.x, mouse.y], \"black\", ctx2); \n",
+        "       merge(false, mouse.x, mouse.y);\n",
+        "\n",
+        "\n",
+        "\n",
         "       break;\n",
         "    case 1:\n",
         "    \n",
@@ -4118,7 +4118,7 @@
         "\n",
         "vwidth=0\n",
         "display.display(HTML(canvas_html))\n",
-        "jscommand('prepare(\"%d\",\"%d\");' % (1024,1024))\n",
+        "jscommand('prepare(\"%d\",\"%d\");' % (768,512))\n",
         "imgcommand('/content/3.png',reload_source)\n",
         "imgcommand('/content/44.png', reload_mask)\n",
         "# vwidth=jscommand(getwidth)\n",
