--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -3383,7 +3383,7 @@
         "\n",
         "var valblur=\"\";\n",
         "var switch2=true;\n",
-        "var colorSelected=\"#FFFFFF\"\n",
+        "var colorSelected=\"#000000\"\n",
         "var colorpick=\"#000000\";\n",
         "var paintcolor=\"#000000\";\n",
         "var translucidcolor=\"#FF0000\";\n",
@@ -3480,8 +3480,9 @@
         "    vctx.lineJoin = \"round\";\n",
         "    vctx.lineTo(newPoint[0], newPoint[1]);\n",
         "    vctx.stroke();\n",
-        "\n",
+        "    var templatest=latestPoint;\n",
         "    latestPoint = newPoint;\n",
+        "    return templatest;\n",
         "};\n",
         "\n",
         "const colors = document.getElementsByClassName('color');\n",
@@ -3533,17 +3534,12 @@
         "\n",
         "  if (blendmode===blendmodes.paint)\n",
         "  {\n",
+        "  latestPoint=[mouse.x, mouse.y];\n",
         "  mousebutton=e.button;\n",
         "  ctx2.filter = \"blur(0px)\";\n",
         "  vblur.value=0;\n",
         "  ctx6.drawImage(canvas7,0,0,canvas1.width,canvas1.height)\n",
         "  ctx7.drawImage(canvas6,0,0,canvas1.width,canvas1.height)\n",
-        "  ctx.beginPath()\n",
-        "  ctx6.beginPath()\n",
-        "  ctx.moveTo(mouse.x, mouse.y)\n",
-        "  ctx6.moveTo(mouse.x, mouse.y)\n",
-        "  ctx2.beginPath()\n",
-        "  ctx2.moveTo(mouse.x, mouse.y)\n",
         "  canvas.addEventListener('mousemove', onPaint)\n",
         "  }\n",
         "\n",
@@ -3570,7 +3566,7 @@
         "  \n",
         "  switch (mousebutton) {\n",
         "    case 0:\n",
-        "       if (blendmode===blendmodes.coloredlevels) continueStroke([mouse.x, mouse.y], colorselected, ctx2);\n",
+        "       if (blendmode===blendmodes.coloredlevels) continueStroke([mouse.x, mouse.y], colorSelected, ctx2);\n",
         "       else continueStroke([mouse.x, mouse.y], \"black\", ctx2); \n",
         "       merge(false, mouse.x, mouse.y);\n",
         "       break;\n",
@@ -3595,12 +3591,10 @@
         " \n",
         "  switch (mousebutton) {\n",
         "    case 0:\n",
-        "    \n",
-        "       continueStroke([mouse.x, mouse.y], paintcolor, ctx6); \n",
+        "\n",
+        "       latestPoint=continueStroke([mouse.x, mouse.y], paintcolor, ctx6); \n",
         "       continueStroke([mouse.x, mouse.y], \"black\", ctx2); \n",
         "       merge(false, mouse.x, mouse.y);\n",
-        "\n",
-        "\n",
         "\n",
         "       break;\n",
         "    case 1:\n",
@@ -3610,13 +3604,9 @@
         "     \n",
         "    case 2:\n",
         "     \n",
-        "       ctx6.fillStyle = 'white'\n",
-        "       ctx6.arc(mouse.x, mouse.y, brushsize, 0, 2 * Math.PI)\n",
-        "       ctx6.fill()\n",
-        "       ctx2.fillStyle=\"white\";\n",
-        "       ctx2.arc(mouse.x, mouse.y, brushsize, 0, 2 * Math.PI) \n",
-        "       ctx2.fill()\n",
-        "       merge(false);\n",
+        "       latestPoint=continueStroke([mouse.x, mouse.y], \"white\", ctx6); \n",
+        "       continueStroke([mouse.x, mouse.y], \"white\", ctx2); \n",
+        "       merge(false, mouse.x, mouse.y);\n",
         "      break;\n",
         "    default:\n",
         "\n",
@@ -3818,11 +3808,6 @@
         "              {\n",
         "                \n",
         "               \n",
-        "                 //pixels[i] =    Math.min(Math.floor(( pixels[i]) * (pixels6[i]) / 255), 128);\n",
-        "                 //pixels[i+1] =  Math.min(Math.floor((pixels[i+1]) * (pixels6[i+1]) / 255), 128);\n",
-        "                 //pixels[i+2] =  Math.min(Math.floor((pixels[i+2]) * (pixels6[i+2]) / 255), 128); \n",
-        "                 //pixels[i+3] = 255;\n",
-        "\n",
         "                 pixels[i] =   pixels6[i];\n",
         "                 pixels[i+1] =  pixels6[i+1];\n",
         "                 pixels[i+2] =  pixels6[i+2];\n",
@@ -4118,9 +4103,9 @@
         "\n",
         "vwidth=0\n",
         "display.display(HTML(canvas_html))\n",
-        "jscommand('prepare(\"%d\",\"%d\");' % (768,512))\n",
+        "jscommand('prepare(\"%d\",\"%d\");' % (512,512))\n",
         "imgcommand('/content/3.png',reload_source)\n",
-        "imgcommand('/content/44.png', reload_mask)\n",
+        "imgcommand('/content/4.png', load_img_cache)\n",
         "# vwidth=jscommand(getwidth)\n",
         "# print (vwidth)\n",
         "\n",
