--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -2716,12 +2716,14 @@
         "      jscommand('blendmode=blendmodes.coloredlevels; merge(false);')\n",
         "    elif wblendmode.value == 6:\n",
         "      jscommand('blendmode=blendmodes.tint; merge(false);')\n",
-        "  # elif dia == 5:\n",
-        "  #   print('viernes')\n",
-        "  # elif dia == 6:\n",
-        "  #   print('sábado')\n",
-        "  # elif dia == 7:\n",
-        "  #   print('domingo')\n",
+        "    elif wblendmode.value == 7:\n",
+        "      jscommand('blendmode=blendmodes.rapid;')\n",
+        "  #   elif dia == 5:\n",
+        "  #    print('viernes')\n",
+        "  #  elif dia == 6:\n",
+        "  #    print('sábado')\n",
+        "  #  elif dia == 7:\n",
+        "  #    print('domingo')\n",
         "    else:\n",
         "      print('error')  \n",
         "\n",
@@ -4295,7 +4297,8 @@
         "# # # dump(wimage)\n"
       ],
       "metadata": {
-        "id": "B0Cs8RPxo_Jx"
+        "id": "B0Cs8RPxo_Jx",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -4317,6 +4320,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title Texto de título predeterminado\n",
         "# canvas_html = \"\"\"\n",
         "\n",
         "# <style>\n",
@@ -5032,7 +5036,8 @@
         "# \"\"\""
       ],
       "metadata": {
-        "id": "sYRkGSiE5HfG"
+        "id": "sYRkGSiE5HfG",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
