--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -886,8 +886,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "kFreILgAkEW4",
-        "cellView": "form"
+        "id": "kFreILgAkEW4"
       },
       "execution_count": null,
       "outputs": []
@@ -1969,7 +1968,7 @@
       ],
       "metadata": {
         "id": "xig0jyRsEUMB",
-        "cellView": "form"
+        "cellView": "code"
       },
       "execution_count": null,
       "outputs": []
@@ -2682,7 +2681,7 @@
         "   \n",
         "    imgcommand(SaveResultLocal(actualimage), load_img_blend)\n",
         "    wblendmode.value=1\n",
-        "    jscommand(\"merge(true)\")\n",
+        "    jscommand(\"merge(false)\")\n",
         "\n",
         "  def wimgtrans_listener(sender):\n",
         "    print(wimgtrans.max)\n",
@@ -3103,7 +3102,7 @@
       ],
       "metadata": {
         "id": "uIt2mmMu0uJv",
-        "cellView": "form"
+        "cellView": "code"
       },
       "execution_count": null,
       "outputs": []
@@ -3213,8 +3212,7 @@
         "  torch.cuda.empty_cache()"
       ],
       "metadata": {
-        "id": "u_o7wa5_wYLJ",
-        "cellView": "form"
+        "id": "u_o7wa5_wYLJ"
       },
       "execution_count": null,
       "outputs": []
@@ -4297,8 +4295,7 @@
         "# # # dump(wimage)\n"
       ],
       "metadata": {
-        "id": "B0Cs8RPxo_Jx",
-        "cellView": "form"
+        "id": "B0Cs8RPxo_Jx"
       },
       "execution_count": null,
       "outputs": []
