--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -886,7 +886,8 @@
         "\n"
       ],
       "metadata": {
-        "id": "kFreILgAkEW4"
+        "id": "kFreILgAkEW4",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -908,7 +909,8 @@
         "\n"
       ],
       "metadata": {
-        "id": "nasgRhJgvH4b"
+        "id": "nasgRhJgvH4b",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -1968,7 +1970,7 @@
       ],
       "metadata": {
         "id": "xig0jyRsEUMB",
-        "cellView": "code"
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -3102,7 +3104,7 @@
       ],
       "metadata": {
         "id": "uIt2mmMu0uJv",
-        "cellView": "code"
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -3198,7 +3200,7 @@
       ],
       "metadata": {
         "id": "YgVeGnkZMsBP",
-        "cellView": "code"
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -3212,7 +3214,8 @@
         "  torch.cuda.empty_cache()"
       ],
       "metadata": {
-        "id": "u_o7wa5_wYLJ"
+        "id": "u_o7wa5_wYLJ",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -4295,7 +4298,8 @@
         "# # # dump(wimage)\n"
       ],
       "metadata": {
-        "id": "B0Cs8RPxo_Jx"
+        "id": "B0Cs8RPxo_Jx",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -4303,13 +4307,15 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title Texto de título predeterminado\n",
         "#elimina un directorio\n",
         "\n",
         "#!rm -rf '/content/localwork'\n",
         "\n"
       ],
       "metadata": {
-        "id": "gvTgYaDEra_z"
+        "id": "gvTgYaDEra_z",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
