--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -1245,6 +1245,9 @@
         "  ctx5.imageSmoothingEnabled=false;\n",
         "  ctx6.imageSmoothingEnabled=false;\n",
         "  ctx7.imageSmoothingEnabled=false;\n",
+        "  }\n",
+        "\n",
+        "  const reset = () => {\n",
         "\n",
         "  ctx2.fillStyle = 'white';\n",
         "  ctx2.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
@@ -1255,9 +1258,7 @@
         "  ctx7.fillStyle = 'white';\n",
         "  ctx7.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
         "\n",
-        "  }\n",
-        "\n",
-        "\n",
+        "}\n",
         "\n",
         "const blendmodes = {\n",
         "\ttranslucid: \"translucid\",\n",
@@ -2572,10 +2573,15 @@
         "   wimgshowconf.value=imgbytes\n",
         "   wimgresult.value=imgbytes\n",
         "   smetadata=Image.open(io.BytesIO(imgbytes)).info\n",
+        "   \n",
         "   if bool(smetadata):\n",
         "      MetaToParam(smetadata,parenv)\n",
+        "      vwidth=jscommand(getwidth)\n",
+        "      vheight=jscommand(getheight)\n",
+        "      if (ww.value!=vwidth or wh.value!=vheight):\n",
+        "          jscommand('prepare(\"%d\",\"%d\");' % (ww.value,wh.value))\n",
         "   else:\n",
-        "      #print(\"Image without configuration parameters!\")\n",
+        "      jscommand('mensajes.textContent=\"Image without config params!!')\n",
         "      pass\n",
         "\n",
         "  def wstartevent(sender):\n",
@@ -2585,6 +2591,7 @@
         "    vheight=jscommand(getheight)\n",
         "    if (ww.value!=vwidth or wh.value!=vheight):\n",
         "      jscommand('prepare(\"%d\",\"%d\");' % (ww.value,wh.value))\n",
+        "      jscommand('reset();')\n",
         "  \n",
         "\n",
         "    if (winitstate.value): \n",
@@ -3199,8 +3206,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "YgVeGnkZMsBP",
-        "cellView": "form"
+        "id": "YgVeGnkZMsBP"
       },
       "execution_count": null,
       "outputs": []
