--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -2569,6 +2569,8 @@
         "    return\n",
         "\n",
         "  def LoadImgConfig(vbutton):\n",
+        "   imgbytes=b''\n",
+        "   #print(\"event called\")\n",
         "   imgbytes=(wupload.value.get(wupload.metadata[0].get('name'))).get('content')\n",
         "   wimgshowconf.value=imgbytes\n",
         "   wimgresult.value=imgbytes\n",
@@ -2582,7 +2584,15 @@
         "          jscommand('prepare(\"%d\",\"%d\");' % (ww.value,wh.value))\n",
         "   else:\n",
         "      jscommand('mensajes.textContent=\"Image without config params!!')\n",
-        "      pass\n",
+        "\n",
+        "  \n",
+        "    \n",
+        "   wupload.unobserve(LoadImgConfig,'value')\n",
+        "   wupload.value=b''\n",
+        "   wupload.observe(LoadImgConfig,'value')\n",
+        "  \n",
+        "  \n",
+        "  \n",
         "\n",
         "  def wstartevent(sender):\n",
         "    wimgtrans.disabled=True\n",
@@ -2780,8 +2790,8 @@
         "  wfillmask.on_click(fillmask)\n",
         "  wcacheimg.on_click(wchacheimg_click)\n",
         "  wcommit.on_click(wcommit_click)\n",
-        "  wupscale.observe(wupscale_listener, 'value')\n",
         "  wupload.observe(LoadImgConfig, 'value')\n",
+        "  wupscale.observe(wupscale_listener, 'value')\n",
         "  wimgtrans.observe(wimgtrans_listener, 'value')\n",
         "  winitstate.observe(winitstate_listener, 'value')\n",
         "  wmaskstate.observe(wmaskstate_listener, 'value')\n",
@@ -2790,6 +2800,7 @@
         "  wpaintcolor.observe(wpaintcolor_listener, 'value')\n",
         "  ww.observe(changesize_listener, 'value')\n",
         "  wh.observe(changesize_listener, 'value')\n",
+        "\n",
         "\n",
         "################################################################\n",
         "# WIDGETS STATE INITIALIZATORS\n",
@@ -3110,8 +3121,7 @@
         "      \n"
       ],
       "metadata": {
-        "id": "uIt2mmMu0uJv",
-        "cellView": "form"
+        "id": "uIt2mmMu0uJv"
       },
       "execution_count": null,
       "outputs": []
