--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -895,11 +895,22 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Widgets imports\n",
-        "# Imports for JupyterLite\n",
+        "# @title Widgets imports\n",
+        "# # Imports for JupyterLite\n",
+        "# try:\n",
+        "#     import piplite\n",
+        "#     await piplite.install(['ipywidgets'])\n",
+        "# except ImportError:\n",
+        "#     pass\n",
+        "\n",
+        "# import ipywidgets as widgets\n",
+        "# from ipywidgets import interact\n",
+        "\n",
+        "# #@title Widgets imports\n",
+        "\n",
         "try:\n",
-        "    import piplite\n",
-        "    await piplite.install(['ipywidgets'])\n",
+        "    !pip install -q ipywidgets==8.0.0a6\n",
+        "  \n",
         "except ImportError:\n",
         "    pass\n",
         "\n",
@@ -909,8 +920,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "nasgRhJgvH4b",
-        "cellView": "form"
+        "id": "nasgRhJgvH4b"
       },
       "execution_count": null,
       "outputs": []
@@ -2588,7 +2598,8 @@
         "  \n",
         "    \n",
         "   wupload.unobserve(LoadImgConfig,'value')\n",
-        "   wupload.value=b''\n",
+        "   wupload.value.clear()\n",
+        "   wupload._counter = 0\n",
         "   wupload.observe(LoadImgConfig,'value')\n",
         "  \n",
         "  \n",
