--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -102,8 +102,6 @@
         "setup_environment = True #@param {type:\"boolean\"}\n",
         "print_subprocess = False #@param {type:\"boolean\"}\n",
         "\n",
-        "\n",
-        "\n",
         "if setup_environment:\n",
         "    import subprocess, time\n",
         "    print(\"Setting up environment...\")\n",
@@ -132,6 +130,15 @@
         "    print(subprocess.run(['git', 'clone', 'https://github.com/CVL1971/k-diffusion/'], stdout=subprocess.PIPE).stdout.decode('utf-8'))\n",
         "    with open('k-diffusion/k_diffusion/__init__.py', 'w') as f:\n",
         "        f.write('')\n",
+        "\n",
+        "    try:\n",
+        "      !pip install -q ipywidgets==8.0.0a6\n",
+        "  \n",
+        "    except ImportError:\n",
+        "      pass\n",
+        "\n",
+        "    import ipywidgets as widgets\n",
+        "    from ipywidgets import interact\n",
         "\n",
         "    end_time = time.time()\n",
         "    print(f\"Environment set up in {end_time-start_time:.0f} seconds\")"
@@ -895,39 +902,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title Widgets imports\n",
-        "# # Imports for JupyterLite\n",
-        "# try:\n",
-        "#     import piplite\n",
-        "#     await piplite.install(['ipywidgets'])\n",
-        "# except ImportError:\n",
-        "#     pass\n",
-        "\n",
-        "# import ipywidgets as widgets\n",
-        "# from ipywidgets import interact\n",
-        "\n",
-        "# #@title Widgets imports\n",
-        "\n",
-        "try:\n",
-        "    !pip install -q ipywidgets==8.0.0a6\n",
-        "  \n",
-        "except ImportError:\n",
-        "    pass\n",
-        "\n",
-        "import ipywidgets as widgets\n",
-        "from ipywidgets import interact\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "nasgRhJgvH4b"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#@markdown **Auxiliar functions**\n",
         "\n",
         "from PIL.PngImagePlugin import PngInfo\n",
@@ -982,9 +956,6 @@
         "  ct = b64encode(ct_bytes).decode('utf-8')\n",
         "  return ct\n",
         "  \n",
-        " \n",
-        "\n",
-        "\n",
         "def decript(data):\n",
         "  iv=   b'\\xaf\\x00\\n\\x96\\xf5\\x9f\\xde\\x02\\xb8 \\x88w\\xf2\\x83\\x99\\x9e'\n",
         "  key = b'&\\xbf\\x18\\x1f\\x0b\\x12\\x06\\x0c\\x0e\\xc6m\\xd6\\xaf0uZ\\xfdb\\x89\\xe7o\\xd8\\xff=D\\xde\\x86H\\x03j\\xc2,'\n",
@@ -1115,6 +1086,35 @@
         "    except:\n",
         "      #print(\"Metadata Not found, parameteres as default\")\n",
         "      pass\n",
+        "\n",
+        "def BuildErsganParams(upsizeopt, faceopt, inputimage, outputpath):\n",
+        "  \n",
+        "  face=''\n",
+        "  if faceopt:\n",
+        "    face='--face_enhance'\n",
+        "  origenimg=inputimage\n",
+        "  targetpath=outputpath\n",
+        "  \n",
+        "  return (f'-n RealESRGAN_x4plus -i {origenimg} -o {targetpath} --outscale {upsizeopt}  {face} --suffix ersgan ')\n",
+        "\n",
+        "\n",
+        "\n",
+        "   # if it is out of memory, try to use the `--tile` option\n",
+        "  # We upsample the image with the scale factor X3.5\n",
+        "\n",
+        "  # par='-n RealESRGAN_x4plus -i upload -o results --outscale 4 --fp32 --face_enhance'\n",
+        "  # !python inference_realesrgan.py $par\n",
+        "  # Arguments\n",
+        "  # -n, --model_name: Model names\n",
+        "  # -i, --input: input folder or image\n",
+        "  # --outscale: Output scale, can be arbitrary scale factore. \n",
+        "  #[-h] [-i INPUT] [-n MODEL_NAME] [-o OUTPUT]\n",
+        "  #                               [-dn DENOISE_STRENGTH] [-s OUTSCALE]\n",
+        "  #                               [--model_path MODEL_PATH] [--suffix SUFFIX]\n",
+        "  #                               [-t TILE] [--tile_pad TILE_PAD]\n",
+        "  #                              [--pre_pad PRE_PAD] [--face_enhance] [--fp32]\n",
+        "  #                               [--alpha_upsampler ALPHA_UPSAMPLER] [--ext EXT]\n",
+        "  #                              [-g GPU_ID]\n",
         "\n",
         "canvas_html = \"\"\"\n",
         "\n",
@@ -1260,13 +1260,13 @@
         "  const reset = () => {\n",
         "\n",
         "  ctx2.fillStyle = 'white';\n",
-        "  ctx2.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
+        "  ctx2.fillRect( 0, 0, canvas2.width, canvas2.height);\n",
         "  ctx3.fillStyle = 'white';\n",
-        "  ctx3.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
+        "  ctx3.fillRect( 0, 0, canvas2.width, canvas2.height);\n",
         "  ctx6.fillStyle = 'white';\n",
-        "  ctx6.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
+        "  ctx6.fillRect( 0, 0, canvas2.width, canvas2.height);\n",
         "  ctx7.fillStyle = 'white';\n",
-        "  ctx7.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
+        "  ctx7.fillRect( 0, 0, canvas2.width, canvas2.height);\n",
         "\n",
         "}\n",
         "\n",
@@ -1989,9 +1989,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown **Param Functions**\n",
-        "\n",
-        "\n",
+        "#@markdown **Interface section**\n",
         "\n",
         "def InitParams():\n",
         "\n",
@@ -2234,7 +2232,8 @@
         "\n",
         "  wupload=widgets.FileUpload(\n",
         "  accept='.png',  # Accepted file extension e.g. '.txt', '.pdf', 'image/*', 'image/*,.pdf'\n",
-        "  multiple=False  # True to accept multiple files upload else False \n",
+        "  multiple=False,  # True to accept multiple files upload else False \n",
+        "  button_style='info' \n",
         "  )\n",
         "\n",
         " #####---wimgshowconf---\n",
@@ -2818,37 +2817,20 @@
         "################################################################\n",
         "\n",
         " \n",
-        "  return locals()\n",
-        "\n",
-        "def BuildErsganParams(upsizeopt, faceopt, inputimage, outputpath):\n",
-        "  \n",
-        "  face=''\n",
-        "  if faceopt:\n",
-        "    face='--face_enhance'\n",
-        "  origenimg=inputimage\n",
-        "  targetpath=outputpath\n",
-        "  \n",
-        "  return (f'-n RealESRGAN_x4plus -i {origenimg} -o {targetpath} --outscale {upsizeopt}  {face} --suffix ersgan ')\n",
-        "\n",
-        "\n",
-        "\n",
-        "   # if it is out of memory, try to use the `--tile` option\n",
-        "  # We upsample the image with the scale factor X3.5\n",
-        "\n",
-        "  # par='-n RealESRGAN_x4plus -i upload -o results --outscale 4 --fp32 --face_enhance'\n",
-        "  # !python inference_realesrgan.py $par\n",
-        "  # Arguments\n",
-        "  # -n, --model_name: Model names\n",
-        "  # -i, --input: input folder or image\n",
-        "  # --outscale: Output scale, can be arbitrary scale factore. \n",
-        "  #[-h] [-i INPUT] [-n MODEL_NAME] [-o OUTPUT]\n",
-        "  #                               [-dn DENOISE_STRENGTH] [-s OUTSCALE]\n",
-        "  #                               [--model_path MODEL_PATH] [--suffix SUFFIX]\n",
-        "  #                               [-t TILE] [--tile_pad TILE_PAD]\n",
-        "  #                              [--pre_pad PRE_PAD] [--face_enhance] [--fp32]\n",
-        "  #                               [--alpha_upsampler ALPHA_UPSAMPLER] [--ext EXT]\n",
-        "  #                              [-g GPU_ID]\n",
-        "    \n",
+        "  return locals()"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "WnfjmNA3TRbj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown **Param Functions**\n",
+        "   \n",
         "\n",
         "\n",
         "def DeforumArgs(args):\n",
@@ -3132,7 +3114,8 @@
         "      \n"
       ],
       "metadata": {
-        "id": "uIt2mmMu0uJv"
+        "id": "uIt2mmMu0uJv",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -3149,24 +3132,16 @@
     {
       "cell_type": "code",
       "source": [
-        "#from ipywidgets.widgets.widget_upload import ButtonStyle\n",
         "#@markdown **Param Builder**\n",
         "\n",
         "from IPython.display import Javascript\n",
         "from IPython import display\n",
         "import io\n",
         "\n",
-        "\n",
-        "\n",
         "parenv=SimpleNamespace(**InitParams())\n",
-        "\n",
-        "\n",
-        "#####---imgresult----\n",
         "\n",
         "global wimgresult\n",
         "global wimgresultretouch\n",
-        "\n",
-        "#def drawimgresult(sender):\n",
         "\n",
         "wimgresult=widgets.Image(\n",
         "width='auto',\n",
@@ -3178,52 +3153,11 @@
         "height='auto'\n",
         ")\n",
         "\n",
-        "\n",
-        "\n",
-        "#####wdrawresult\n",
-        "\n",
-        "# canvas=buildcanvas(512,512)\n",
-        "# wdraw=widgets.HTML(\n",
-        "#     value=canvas,\n",
-        "#     placeholder='',\n",
-        "#     description='',\n",
-        "# )\n",
-        "\n",
         "wimgresultbox=widgets.HBox([wimgresult, wimgresultretouch])\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "display.display(wimgresultbox)\n",
-        "#888\n",
-        "\n",
-        "print (wimgresult.width)\n",
-        "\n",
         "display.display(HTML(canvas_html))\n",
         "jscommand('prepare(\"%d\",\"%d\");' % (512,512))\n",
-        "\n",
-        "# eval_js(buildnewsource('/content/3.png'))\n",
-        "# eval_js(buildnewmask('/content/33.png'))\n",
-        "# cpaint(canvas,'/content/mask.png')\n",
-        "# eval_js(buildnewsource('/content/4.png'))\n",
-        "# eval_js(delete_mask)\n",
-        "# eval_js(buildnewmask('/content/44.png'))\n",
-        "# cpaint(canvas,'/content/mask.png')\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "jscommand('reset();')\n",
         "\n"
       ],
       "metadata": {
